fix: remove user controller and user service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: dev
+#      target: dev
     container_name: jaksim-server
     ports:
       - "${APP_PORT}:8080"
