--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
 # ===== Logging =====
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# ===== Gemini_ai ======
+gemini.api-key=${GEMINI_API_KEY}
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent
+
+logging.level.jaksim.server.global.ai=DEBUG
