--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     // Swagger / OpenAPI
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
+    //WebClient
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
