fix: GeminiAPI key값 환경변수에서 할당

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,6 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
 # ===== Gemini_ai ======
-gemini.api-key=${GEMINI_API_KEY}
-gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent
+gemini.api.key=${GEMINI_API_KEY}
 
 logging.level.jaksim.server.global.ai=DEBUG
